--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,10 @@ author: Garret Sumagang
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  About: "aboutme"
+  Projects: "projects"
+  Resume: "https://drive.google.com/file/d/1jj9zpt6AX482cPXMUX0dKd16TbYjWNDm/view?usp=sharing"
+  Contact: "contact"
 
 
 ################
