Update website title in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Garret Sumagang | Data Analytics, AI & Automation
+title: Garret Sumagang | Ecommerce Analyst
 
 # Your name to show in the footer
 author: Garret Sumagang
