Update title to 'Performance Marketing Analyst'

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Garret Sumagang | Ecommerce Analyst
+title: Garret Sumagang | Performance Marketing Analyst
 
 # Your name to show in the footer
 author: Garret Sumagang
