--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,10 @@
 ############################
 
 # Name of website
-title: Garret Sumagang | Performance Marketing Analyst
+title: Garret Sumagang
+
+# Short description of your site - shows in search results
+description: Performance Marketing Analyst specializing in Amazon & Walmart advertising analytics and data-driven optimization
 
 # Your name to show in the footer
 author: Garret Sumagang
@@ -53,7 +56,7 @@ social-network-links:
   email: "nosumagang@up.edu.ph"
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
-  github: daattali
+  github: garretos
 #  twitter: daattali
 #  patreon: DeanAttali
 #  youtube: "@daattali"
