--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: Garret Sumagang
 navbar-links:
   About: "aboutme"
   Projects: "projects"
-  Resume: "/assets/resume.pdf"
+  Resume: "/assets/garret-sumagang-resume.pdf"
   Contact: "contact"
 
 
