--- a/_config.yml
+++ b/_config.yml
@@ -143,12 +143,12 @@ page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-navbar-col: "#164570"
-#navbar-col: "#EAEAEA" original color
+#navbar-col: "#164570" olj blue
+navbar-col: "#EAEAEA" 
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-footer-col: "#164570"
-#footer-col: "#EAEAEA"
+#footer-col: "#164570" olj blue
+footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
