--- a/_config.yml
+++ b/_config.yml
@@ -139,19 +139,32 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
+#page-col: "#FFFFFF"
+#text-col: "#404040"
+#link-col: "#008AFF"
+#hover-col: "#0085A1"
 #navbar-col: "#164570" olj blue
-navbar-col: "#EAEAEA" 
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
+#navbar-col: "#EAEAEA" 
+#navbar-text-col: "#404040"
+#navbar-border-col: "#DDDDDD"
 #footer-col: "#164570" olj blue
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+#footer-col: "#EAEAEA"
+#footer-text-col: "#777777"
+#footer-link-col: "#404040"
+#footer-hover-col: "#0085A1"
+
+# Trustworthy Professional Color Scheme
+page-col: "#FFFFFF"           # Clean white background
+text-col: "#2C3E50"           # Deep blue-gray for authority
+link-col: "#2E5C8A"           # Professional navy blue (trust)
+hover-col: "#1A3A52"          # Darker navy on hover
+navbar-col: "#F8F9FA"         # Subtle off-white
+navbar-text-col: "#2C3E50"    # Matching dark blue-gray
+navbar-border-col: "#E1E8ED"  # Soft gray-blue border
+footer-col: "#34495E"         # Solid dark blue-gray footer
+footer-text-col: "#BDC3C7"    # Light gray for contrast
+footer-link-col: "#5DADE2"    # Lighter blue for visibility
+footer-hover-col: "#3498DB"   # Bright blue hover
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
