--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ social-network-links:
   email: "nosumagang@up.edu.ph"
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
-  github: garretos
+#  github: garretos
 #  twitter: daattali
 #  patreon: DeanAttali
 #  youtube: "@daattali"
@@ -74,7 +74,7 @@ social-network-links:
 #  twitch: yourname
 #  yelp: yourname
 #  telegram: yourname
-#  calendly: yourname
+  calendly: garret-sumagang
 #  mastodon: instance.url/@username
 #  bluesky: yourname
 #  ORCID: your ORCID ID
