--- a/_config.yml
+++ b/_config.yml
@@ -159,7 +159,10 @@ text-col: "#2C3E50"           # Deep blue-gray for authority
 link-col: "#2E5C8A"           # Professional navy blue (trust)
 hover-col: "#1A3A52"          # Darker navy on hover
 # navbar-col: "#F8F9FA"         # Subtle off-white
-navbar-col: "#D6DFE8"         # Medium blue-gray (more substantial)
+navbar-col: "#E8EDF2"         # Soft blue-gray (darker but still light)
+# navbar-col: "#D6DFE8"         # Medium blue-gray (more substantial)
+# navbar-col: "#34495E"         # Dark blue-gray (matches footer, very professional)
+# navbar-text-col: "#FFFFFF"    # White text for contrast
 navbar-text-col: "#2C3E50"    # Matching dark blue-gray
 navbar-border-col: "#E1E8ED"  # Soft gray-blue border
 footer-col: "#34495E"         # Solid dark blue-gray footer
